[package]
name = "rs-leveldb"
version = "0.1.0"
authors = ["liukaizeng <1051299241@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Almost-complete bindings for leveldb for Rust."


[lib]
name = "leveldb"
path = "src/lib.rs"

[dependencies]
libc = "0.2.4"
leveldb-sys = "2.0.0"

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = ["leveldb-sys/snappy"]
