[package]
name = "rs-leveldb"
version = "0.1.1"
authors = ["fetchadd <kaizengliu@qq.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Almost-complete bindings for leveldb for Rust."
homepage = "https://github.com/fetchadd/leveldb"
repository = "https://github.com/fetchadd/leveldb"

keywords = ["leveldb"]

[lib]
name = "leveldb"
path = "src/lib.rs"

[dependencies]
libc = "0.2.4"
leveldb-sys = "2.0.0"

[dev-dependencies]
tempdir = "0.3.4"

[features]
default = ["leveldb-sys/snappy"]
